--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,12 @@
 {erl_opts, [debug_info]}.
+
+{dialyzer, [
+    {warnings, [
+        error_handling,
+        no_unknown
+    ]}
+]}.
+
 {deps,
  [
   { jsone, "1.9.0" }
