change 'main' to 'master'

--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -1,11 +1,11 @@
 name: Erlang CI
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
     paths-ignore:
       - "sbom.json"
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
     paths-ignore:
       - "sbom.json"
 
