fix branches synthax

--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -1,11 +1,13 @@
 name: Erlang CI
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
     paths-ignore:
       - "sbom.json"
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
     paths-ignore:
       - "sbom.json"
 
