--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -1,4 +1,13 @@
 {erl_opts, [debug_info]}.
+
+{rebar3_sbom, [
+    {sbom_manufacturer, #{
+        name => "The comunity of the Ring",
+        address => "Bag End, Hobbiton, Shire"
+    }},
+    {sbom_licenses, ["BSD-3-Clause"]}
+]}.
+
 {deps, [
     meck,
     grisp
