--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -3,7 +3,13 @@
 {rebar3_sbom, [
     {sbom_manufacturer, #{
         name => "The comunity of the Ring",
-        address => "Bag End, Hobbiton, Shire"
+        address => #{
+                country => "Middle-earth",
+                region => "Shire",
+                locality => "Hobbiton",
+                postal_code => "12345",
+                street_address => "Bag End, Hobbiton, Shire"
+            }
     }},
     {sbom_licenses, ["BSD-3-Clause"]}
 ]}.
