fix metadata.manufacturer.contact + update README

--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -9,7 +9,12 @@
                 locality => "Hobbiton",
                 postal_code => "12345",
                 street_address => "Bag End, Hobbiton, Shire"
-            }
+            },
+        contact => [
+            #{name => "Frodo Baggins"},
+            #{name => "Gandalf the Grey",
+              phone => "1234567890"}
+        ]
     }},
     {sbom_licenses, ["BSD-3-Clause"]}
 ]}.
