make url property an array + additional test on empty url

--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -10,6 +10,7 @@
                 postal_code => "12345",
                 street_address => "Bag End, Hobbiton, Shire"
             },
+        url => ["https://example.com", "https://another-example.com"],
         contact => [
             #{name => "Frodo Baggins"},
             #{name => "Gandalf the Grey",
