Add missing metadata fields (#8)
* add properties in hrl

* metadata.authors field

* add metadata.manufacturer and metadata.licenses

* moved contact to individual, removed unused record and precised 'acknowledgement' values

*  update README

* make url property an array + additional test on empty url

* add test case with empty url array

--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -1,4 +1,25 @@
 {erl_opts, [debug_info]}.
+
+{rebar3_sbom, [
+    {sbom_manufacturer, #{
+        name => "The comunity of the Ring",
+        address => #{
+                country => "Middle-earth",
+                region => "Shire",
+                locality => "Hobbiton",
+                postal_code => "12345",
+                street_address => "Bag End, Hobbiton, Shire"
+            },
+        url => ["https://example.com", "https://another-example.com"],
+        contact => [
+            #{name => "Frodo Baggins"},
+            #{name => "Gandalf the Grey",
+              phone => "1234567890"}
+        ]
+    }},
+    {sbom_licenses, ["BSD-3-Clause"]}
+]}.
+
 {deps, [
     meck,
     grisp
