metadata.component.hash

--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -29,3 +29,7 @@
     %% {config, "config/sys.config"},
     {apps, [basic_app]}
 ]}.
+
+{relx, [
+    {release, {basic_app, "0.1.0"}, [basic_app]}
+]}.
