more details for metadata.tools

--- a/test/basic_app/rebar.config
+++ b/test/basic_app/rebar.config
@@ -26,6 +26,12 @@
     hex_core
 ]}.
 
+{project_plugins, [
+    {rebar3_sbom, {git, "git@github.com:stritzinger/rebar3_sbom.git", {branch, "gl/metadata.tools"}}}
+]}.
+
+% {checkouts_dir, "../../../../../../../"}. % Path from Priv dir to root of the project
+
 {shell, [
     %% {config, "config/sys.config"},
     {apps, [basic_app]}
