--- a/test/local_app/_checkouts/checkout_app/rebar.config
+++ b/test/local_app/_checkouts/checkout_app/rebar.config
@@ -1,5 +1,13 @@
 {erl_opts, [debug_info]}.
+
+{rebar3_sbom, [
+]}.
+
 {deps, []}.
+
+% {project_plugins, [
+%     rebar3_sbom
+% ]}.
 
 {shell, [
     %% {config, "config/sys.config"},
