--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # SPDX-FileCopyrightText: 2019 Bram Verburg
-# SPDX-FileCopyrightText: 2024 Máté Lajkó
+# SPDX-FileCopyrightText: 2024 Stritzinger GmbH
 # SPDX-FileCopyrightText: 2025 Erlang Ecosystem Foundation
 
 .rebar3
