--- a/.github/workflows/part_publish.yml
+++ b/.github/workflows/part_publish.yml
@@ -33,6 +33,6 @@ jobs:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - uses: ./.github/actions/setup-runtime-env
 
-      - run: rebar3 hex publish --yes
+      - run: rebar3 hex publish -r hexpm --yes
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
